update: polish the options and upgrade gradle Also add the sample code for local testing usage