@@ -11,3 +11,10 @@ dependencies {
     compileOnly "org.projectlombok:lombok:$lombokVersion"
     annotationProcessor "org.projectlombok:lombok:$lombokVersion"
 }
+
+// for higher JDK compatibility
+test {
+    doFirst {
+        jvmArgs += "--add-opens=java.base/java.lang=ALL-UNNAMED"
+    }
+}
